# TaskApp

./: Cargo.toml  README.md  db.sqlite  db.sqlite-shm  db.sqlite-wal
frontend/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/src/: main.ts  web-client.ts
frontend/src/model/: task-mco.ts
frontend/src/ui/: commons.ts  task-app.ts
src/: README.md  main.rs
src/database/: database.rs  mod.rs
src/model/: mod.rs  task.rs
src/web/: mod.rs  task.rs
