[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
