[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
env_logger = "0.11.3"
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "serde", "serde_json", "env-filter", "tracing-log"] }
warp = "0.3.6"
